--- a/Application/Home/View/Layout/header.html
+++ b/Application/Home/View/Layout/header.html
@@ -18,10 +18,10 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="{:U('Index/index')}">首页</a></li>
                     <li><a href="{:U('Project/pfp')}">PFP香港项目</a></li>
-                    <li><a href="pst.html">PST游学项目</a></li>
-                    <li><a href="schedule.html">日程安排</a></li>
-                    <li><a href="studyabroad.html">留学服务</a></li>
-                    <li><a href="guide.html">申请指南</a></li>
+                    <li><a href="{:U('Project/pst')}">PST游学项目</a></li>
+                    <li><a href="{:U('Schedule/schedule')}">日程安排</a></li>
+                    <li><a href="{:U('Studyabroad/studyabroad')}">留学服务</a></li>
+                    <li><a href="{:U('Guide/guide')}">申请指南</a></li>
                     <li><a class="navbar-pal-btn" href="{:U('Application/application')}">在线申请</a></li>
                 </ul>
             </div>
