--- a/Application/Home/View/Guide/guide.html
+++ b/Application/Home/View/Guide/guide.html
@@ -22,8 +22,8 @@
           <div class="col-xs-12 col-md-4">
               <div class="sidebar">
                 <a href="#step">申请步骤</a>
-                <button type="button" data-toggle="modal" data-target="#time-cost"><span class="glyphicon glyphicon-yen" aria-hidden="true"></span>项目费用明细</a>
-                <button  type="button" data-toggle="modal" data-target="#FAQ"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>常见问题F&Q</a>
+                <button type="button" data-toggle="modal" data-target="#time-cost"><span class="glyphicon glyphicon-yen" aria-hidden="true"></span>项目费用明细</button>
+                <button  type="button" data-toggle="modal" data-target="#FAQ"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>常见问题F&Q</button>
               </div>
           </div>
           <!--申请指南-->
@@ -62,7 +62,7 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="FAQ">常见问题F&Q</h4>
+                  <h4 class="modal-title" id="FAQ-detail">常见问题F&Q</h4>
                 </div>
                 <div class="modal-body">
                   <div class="detail">
